# LazyJava

./: Cargo.toml  README.md
.github/workflows/: rust.yml
scripts/: compile.bat  compile.sh
src/: args.rs  find_main.rs  find_root.rs  lazy_java.rs  lazy_java_error.rs  lib.rs  main.rs  processes.rs  utils.rs
src/clean/: clean.rs  clean_error.rs  mod.rs
src/create/: create_project.rs  init_git.rs  interactive.rs  mod.rs
src/dependancy_graph/: create_graph.rs  graph.rs  graph_error.rs  mod.rs  test.rs
src/find/: find_java.rs  mod.rs
src/interactive/: roadmap.rs
src/logger/: logger.rs
src/lsp/: classpath.rs  classpath_error.rs  classpath_impl.rs  mod.rs
src/run/: interactive_run.rs  mod.rs  run_error.rs  run_java.rs
src/utils/: find_main.rs  find_root.rs  mod.rs  processes.rs
test_filesystem/dep_graph_test/: Test1.java
test_filesystem/dep_graph_test/dir1/: Dep1.java
test_filesystem/dep_graph_test/dir2/: Dep2.java
test_filesystem/find_main_classes_test/: Test1.java  Test2.java  Test3.java  Test4.java
test_filesystem/find_main_classes_test/dir1/: Test5.java
test_filesystem/inc_build_test/: Test1.java
test_filesystem/inc_build_test/dir1/: Dep1.java  Dep2.java  Dep4.java
test_filesystem/inc_build_test/dir2/: Dep3.java
test_filesystem/project/: .classpath
test_filesystem/project/src/: Project.java
